Don't shrink the font used to render a ledgend entry.

It turns out that we can control this using the 'autoShrink' property.
Aushrink was disabled and the alignment was changed to left this way
we can avoid the issues described in without setting a maximum width

BUG: 265728

while keeping a uniform font size for each legend entry as described

BUG: 290820